<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="48dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/text_export_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/export_expalanation"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/export_file_dir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:padding="6dp"
            android:text="@string/export_file_dir" />

        <TextView
            android:id="@+id/export_file_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/textview_border"
            android:padding="6dp"
            android:text="@string/export_file_name_format" />

        <CheckBox
            android:id="@+id/perform_dropbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/export_check_dropbox" />

        <TextView
            android:id="@+id/perfom_dropbox_sub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="48dp"
            android:text="@string/export_check_dropbox_sub"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textSize="12dp" />

    </LinearLayout>

    <Button
        android:id="@+id/button_export"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout1"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="24dp"
        android:text="@string/export_go" />

    <Button
        android:id="@+id/button_external"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_export"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="12dp"
        android:text="@string/export_external" />
    
</RelativeLayout>
